--- a/qrcode.html
+++ b/qrcode.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <title>Instascan</title>
-    <script type="text/javascript" src="https://rawgit.com/schmich/instascan-builds/master/instascan.min.js" ></script>	
+    <script type="text/javascript" src="https://rawgit.com/schmich/instascan-builds/master/instascan.min.js" ></script>
   </head>
   <body>
     <video id="preview"></video>
@@ -16,10 +16,10 @@
             alert('Escaneou o conteudo: ' + content);
             window.open(content, "_blank");
         });
-        Instascan.Camera.getCameras().then(cameras => 
+        Instascan.Camera.getCameras().then(cameras =>
         {
             if(cameras.length > 0){
-                scanner.start(cameras[0]);
+                scanner.start(cameras[cameras.length -1]);
             } else {
                 console.error("Não existe câmera no dispositivo!");
             }
