--- a/qrcode.html
+++ b/qrcode.html
@@ -3,7 +3,16 @@
   <head>
     <title>Instascan</title>
     <script type="text/javascript" src="https://rawgit.com/schmich/instascan-builds/master/instascan.min.js" ></script>
+    <style>
+      #preview {
+        -moz-transform: scaleX(-1);
+        -o-transform: scaleX(-1);
+        -webkit-transform: scaleX(-1);
+        transform: scaleX(-1);
+      }
+    </style>
   </head>
+
   <body>
     <video id="preview"></video>
     <script>
@@ -18,6 +27,7 @@
         });
         Instascan.Camera.getCameras().then(cameras =>
         {
+
             if(cameras.length > 0){
                 scanner.start(cameras[cameras.length -1]);
             } else {
