--- a/qrcode.html
+++ b/qrcode.html
@@ -14,16 +14,17 @@
   </head>
 
   <body>
-    <video id="preview"></video>
+    <video id="preview"  width="100vh" height="100vh"></video>
     <script>
         let scanner = new Instascan.Scanner(
             {
-                video: document.getElementById('preview')
+                video: document.getElementById('preview'),
+                mirror: false,
             }
         );
         scanner.addListener('scan', function(content) {
             alert('Escaneou o conteudo: ' + content);
-            window.open(content, "_blank");
+            // window.open(content, "_blank");
         });
         Instascan.Camera.getCameras().then(cameras =>
         {
