--- a/qrcode.html
+++ b/qrcode.html
@@ -28,7 +28,7 @@
         {
 
             if(cameras.length > 0){
-                scanner.mirror = !cameras.length > 1;
+                scanner.mirror = !(cameras.length > 1);
                 scanner.start(cameras[cameras.length -1]);
             } else {
                 console.error("Não existe câmera no dispositivo!");
