--- a/barcode.html
+++ b/barcode.html
@@ -39,7 +39,7 @@
             console.log(data.codeResult.code);
             alert(data.codeResult.code)
             document.querySelector('#mostra').textContent = (data.codeResult.code)
-            document.querySelector('#resultado').innerText = data.codeResult.code;
+            document.querySelector('#resultado').innerText = data.codeResult.code +" / coderesult" +data.codeResult.format;
         });
 
     </script>
